--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bookms
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/bookms
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/bookms
+spring.r2dbc.username=root
+spring.r2dbc.password=
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=20
+spring.r2dbc.pool.max-idle-time=30m
+spring.r2dbc.pool.validation-query=SELECT 1
